--- a/american-swiss.html
+++ b/american-swiss.html
@@ -6,6 +6,7 @@
      <body style="background-color: aqua">
           <div id="header">
                <br><br>
+               <h1>PINE CITY MALL</h1>
           </div>
           <div id="tabs-top">
                 <a href="index.html">HOME</a>
