--- a/bata.html
+++ b/bata.html
@@ -6,6 +6,7 @@
      
           <div id="header">
                <br><br>
+               <h1>PINE CITY MALL</h1>
     <h1>Bata</h1>
 </div>
 <div id="tabs-top">
